--- a/RuachSignups/RuachSignups.csproj
+++ b/RuachSignups/RuachSignups.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RuachSignups.Infrastructure\RuachSignups.Infrastructure.csproj" />
     <ProjectReference Include="..\Signups.Core\Signups.Core.fsproj" />
   </ItemGroup>
 
