--- a/RuachSignups.Infrastructure/RuachSignups.Infrastructure.csproj
+++ b/RuachSignups.Infrastructure/RuachSignups.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Core" Version="4.2.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
   </ItemGroup>
 
