Updates and things

--- a/RuachSignups/appsettings.json
+++ b/RuachSignups/appsettings.json
@@ -4,5 +4,6 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "CosmosDbConnectionString": "mongodb://shekelator:micahNeeds3tacos@ds127771.mlab.com:27771/hasharet"
 }
