--- a/Signups.Core/Signups.Core.fsproj
+++ b/Signups.Core/Signups.Core.fsproj
@@ -18,8 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Data" Version="2.4.4" />
+    <PackageReference Include="FSharp.Data" Version="2.4.6" />
     <PackageReference Include="System.Globalization" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
