--- a/Signups.Test/Signups.Test.fsproj
+++ b/Signups.Test/Signups.Test.fsproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Data" Version="2.4.4" />
+    <PackageReference Include="FSharp.Data" Version="2.4.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
@@ -28,6 +28,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Signups.Core\Signups.Core.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
