--- a/Signups.Test/Signups.Test.fsproj
+++ b/Signups.Test/Signups.Test.fsproj
@@ -1,41 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
+    <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Include="besorah-data.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Compile Include="BesorahTests.fs" />
-    <Compile Include="ShabbatTests.fs" />
-    <Compile Include="Tests.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="BesorahTests.fs"/>
+    <Compile Include="ShabbatTests.fs"/>
+    <Compile Include="Tests.fs"/>
+    <Compile Include="Program.fs"/>
   </ItemGroup>
-
   <ItemGroup>
     <Content Include="hebcal-data.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="FSharp.Data" Version="3.0.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
+    <PackageReference Include="xunit" Version="2.4.0"/>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
+    <PackageReference Include="FSharp.Data" Version="4.1.1"/>
+    <PackageReference Include="FSharp.Core" Version="5.0.1"/>
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\Signups.Core\Signups.Core.fsproj" />
+    <ProjectReference Include="..\Signups.Core\Signups.Core.fsproj"/>
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="4.5.2" />
-  </ItemGroup>
-
 </Project>
